# pearasys

./: .envrc  README.md  demo.cast  pyproject.toml
docs/: Makefile  USAGE.md  demo.cast  demo.zsh
src/pearapci/: __init__.py  device.py  driver.py  parser.py  service.py  state.py  utils.py
src/pearasys/: __init__.py  parser.py  service.py  state.py  utils.py
src/pearasys/pci/: __init__.py  device.py  driver.py
src/pearasys/templates/: 10-defaults.conf  10-pearasys.conf  conflict.conf  pearasys-device@driver.service
src/templates/: pearapci-device@driver.service.j2
